tests/expectations/compiler/finalize/finalize_name_mismatch_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown function `finalize_mint_public`
    --> compiler-test:8:16
     |
   8 |         return finalize_mint_public(receiver, amount);
     |                ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372088]: An async transition must call an async function.
    --> compiler-test:7:5
     |
   7 |     async transition mint_public(public receiver: address, public amount: u64) -> Future {
   8 |         return finalize_mint_public(receiver, amount);
   9 |     }
     |     ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`
Warning [WTYC0372002]: The async function `finalize_mint_private` is never called by an async transition.
    --> compiler-test:11:5
     |
  11 |     async function finalize_mint_private (public receiver: address, public amount: u64) {
  12 |         Mapping::set(account, receiver, amount);
  13 |     }
     |     ^"""]
